--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,5 @@ xcuserdata/
 finderlost/!*.xcodeproj/xcshareddata/
 finderlost/!*.xcworkspace/contents.xcworkspacedata
 finderlost//*.gcno
-
+finderlost/!*.xcodeproj/project.xcworkspace/xcuserdata
 # End of https://www.gitignore.io/api/xcode,swift,cocoapods
